Clay strips brush leaves cracks on mesh #123768
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#123768
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows-10-10.0.17763-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 516.94
Blender Version
Broken: version: 4.2.0 Beta, branch: blender-v4.2-release, commit date: 2024-06-26 00:39, hash:
224307b9aa48
Worked: never
Short description of error
Undoing big Clay Strips brush stroke does not completely undo affected backfaces, leaving maze-like cracks on mesh.
Curiously, when I was doing video I initially wanted to circle the artifacts with Annotation Tool by holding D key without exiting Sculpt Mode, but immediately as I did that the bug stopped appearing until I re-entered Sculpt Mode. This bug is very fickle and it's important that you don't do any extra steps when reproducing it to not scare it off.
Exact steps for others to reproduce the error
If hard to reproduce, try to start with attached .blend file and watch video for exact technique.
4.2 at
95a74a02bc
seems to still work.On latest 4.3 ctrl Z straightforward crashes.
Crash on assert:
poke poke @HooglyBoogly apparently broken by
59d84a4c42
I know that this issue exist in 4.1, 4.0, and even in 3.6 too(just checked). That's why I cannot date it's introduction.
Humm I guess then the assert crash is actually a different thing... I can revert that to get no crash at this time, but I am not really able to reproduce the "cracks on backfaces" look. It's either crash or working as I'm expecting
Here's a video where I reproduced it in 3.6.7.
Checked on 3.6.13 LTS, same story. Also tested on different machine with different GPU model and driver version number. Same.
This could be more apparent because of my brush settings for Clay Strips or something with startup file. If there's still a problem with reproduction, try
donut.blend
in the original post. It should have my brush and scene settings included, if I'm understanding correctly.Thanks for the report. The issue with cracks appearing with the clay strips brush is a known issue right now unfortunately. But I resolved the crash now so the situation should be improved.
Should it be closed then? The crash was separate issue not reported by me and I don't know any duplicates of this issue to follow.
Undo doesn't work completely for multires sculpting with big brushstrokes, leaves cracks on meshto Clay strips brush leaves cracks on meshGood point, thanks.
A note from @Nicola-Dessi in the module chat:
If there's no further side effects of said change, I'm for it. That way we don't need to manually tune the depth cutoff value for the clay strip brush each time.
I should add that plane offset and z-scale (which as I said in chat I would just keep at 100% instead of 125%) should also be considered when calculating the center point and radius to use in pbvh_gather_generic.