Fix #123768: Sculpt: Crash on undo with multires